# video_speed_detection

./: .gitignore  README.md
blender/: gen-plates.py  gen-speeds.py
gplay/: CMakeLists-gplay.txt  CMakeLists.txt  Gplay.cpp  GplayControlSocket.cpp  GplayControlSocket.h  GplayProperties.cpp  GplayProperties.h  GplayWebDisplay.cpp  GplayWebDisplay.h  HumanHand.cpp  HumanHand.h  HumanHandImu.cpp  HumanHandImu.h  MeshReader.cpp  MeshReader.h  PureLiveVideoListeningSocket.cpp  PureLiveVideoListeningSocket.h  gplay.sh  math_utils.h
gplay/cuda/: 1050.ptx  BufferView.h  MaterialData.h  cuda_utils.h  whitted.cu  whitted.h
gplay/sutil/: Aabb.h  Animation.cpp  Animation.h  Camera.cpp  Camera.h  Quaternion.cpp  Quaternion.h  Record.h  Scene.cpp  Scene.h  gltf_helpers.cpp  gltf_helpers.h  optix_utils.h  vec_math.h
png/: ideal_plot
rc/: licnums.json  rc_reader.py  rcutils.py
rc/parsed/: 1593092046_2020.06.25_16-34-06.json  (+9 more)
thesis/: master-thesis.aux  master-thesis.bcf  master-thesis.bib  master-thesis.bib.blg  master-thesis.fdb_latexmk  master-thesis.fls  master-thesis.run.xml  master-thesis.tct  master-thesis.tex  master-thesis.toc
vspeed/: CMakeLists.txt  ex.json  main.cpp
vspeed/algo/: CMakeLists.txt  CalcSpeed.cpp  CalcSpeed.h  MapFrames.cpp  MapFrames.h  Regression.cpp  Regression.h
vspeed/include/rapidjson/internal/: diyfp.h  dtoa.h  swap.h
vspeed/libs/: CMakeLists.txt  Calc.cpp  Calc.h  Log.cpp  Log.h  OpenCVFwd.h  Rectangle.cpp  Rectangle.h  Transform.cpp  Transform.h  Types.cpp  Types.h
vspeed/utils/: CMakeLists.txt  json.cpp  json.h  utils.cpp  utils.h
(+1 files in other folders)
